--- a/Supermarket_sales.ipynb
+++ b/Supermarket_sales.ipynb
@@ -3663,11 +3663,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#main dash app\n",
     "app.layout = html.Div([\n",
     "    dbc.Row([html.H1('Supermarket Sales Dashboard.'),\n",
     "            html.A('Link to the dataset', href='https://www.kaggle.com/datasets/aungpyaeap/supermarket-sales/code', target='_blank')\n",
     "\n",
-    "            ], style={'background-color':'#80cdc1', 'margin':'5px','border-radius':'10px', 'font-size':'12px'}),\n",
+    "            ], style={'background-color':'#80cdc1', 'margin':'5px','border-radius':'10px', 'font-size':'12px'}), # This row defines the header\n",
     "    \n",
     "    \n",
     "    dbc.Row([\n",
@@ -3678,7 +3679,7 @@
     "        dbc.Col([html.H1(id='cog', style={'font-size':'16px', 'padding-top':'20px'})],style={'background-color':'#dfc27d','margin':'10px','border-radius':'25px'}),\n",
     "        dbc.Col([html.H1(id='cust_rate', style={'font-size':'16px', 'padding-top':'20px'})],style={'background-color':'#dfc27d','margin':'10px','border-radius':'25px'})\n",
     "        \n",
-    "    ]),\n",
+    "    ]), # Defines and style the main key figures that are under the headers\n",
     "    \n",
     "        dbc.Row([dcc.RadioItems(\n",
     "            id='supermarket',\n",
@@ -3688,10 +3689,10 @@
     "                 {'label': 'Branch C', 'value': 'c_branch'}               \n",
     "                ], \n",
     "            value='df',\n",
-    "            labelStyle={'display': 'in-line'}),\n",
+    "            labelStyle={'display': 'in-line'}), \n",
     "            \n",
     "             \n",
-    "            ],style={'margin':'5px'}),\n",
+    "            ],style={'margin':'5px'}), # Creates a radio item\n",
     "    dbc.Row([dbc.Col([dcc.Graph(id='sales_trend', figure={})], width=6),\n",
     "             dbc.Col([dcc.Graph(id='avarage_sales', figure={})], width=6)\n",
     "            ]),\n",
@@ -3715,6 +3716,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Takes the chosen display by the user and returns the total sales \n",
+    "\n",
     "@app.callback(\n",
     "    Output('total-sales', 'children'),\n",
     "    [Input('supermarket', 'value')]\n",
@@ -3730,6 +3733,8 @@
     "    elif user_select == 'c_branch':\n",
     "        return f'Total Sales: {C_total_sales:,}'\n",
     "####################################################\n",
+    "\n",
+    "# Takes the chosen display by the user and returns the gross profit \n",
     "\n",
     "@app.callback(\n",
     "    Output('gross_profit', 'children'),\n",
@@ -3748,6 +3753,8 @@
     "    \n",
     "####################################################\n",
     "\n",
+    "# Takes the chosen display by the user and returns the gross profit percentage\n",
+    "\n",
     "@app.callback(\n",
     "    Output('average_gross%', 'children'),\n",
     "    [Input('supermarket', 'value')]\n",
@@ -3763,6 +3770,8 @@
     "    elif user_select_ == 'c_branch':\n",
     "        return f'Gross Profit %: {C_average_gross_per:,}'\n",
     "####################################################\n",
+    "\n",
+    "# Takes the chosen display by the user and returns the cost of goods \n",
     "\n",
     "@app.callback(\n",
     "    Output('cog', 'children'),\n",
@@ -3780,6 +3789,8 @@
     "        return f'Cost of Goods: {C_cog:,}'\n",
     "    \n",
     "#####################################################\n",
+    "\n",
+    "# Takes the chosen display by the user and returns the Rating given by customers \n",
     "@app.callback(\n",
     "    Output('cust_rate', 'children'),\n",
     "    [Input('supermarket', 'value')]\n",
